--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");
 
 .welcome {
-  background: #404040;
+  background-image: linear-gradient(to top left, #404040, #021823);
+  background: #021823;
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -120,47 +121,15 @@
 
 .technologies__items {
   display: flex;
+  flex-basis: 100%;
 }
 
 .tech__logo {
   width: 7vw;
+  min-width: 50px;
   height: 10vw;
   object-fit: contain;
   filter: saturate();
   filter: grayscale();
   margin: 0 5px;
-}
-
-.cta {
-  text-align: center;
-  padding: 5em 0;
-  background: #606060;
-  color: #e8e9eb;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.cta h2 {
-  color: #e8e9eb;
-  max-width: 80vw;
-}
-
-.cta a {
-  text-decoration: none;
-  margin-top: 1em;
-  background: #03afc2;
-  border: none;
-  font-size: 1.5rem;
-  letter-spacing: 0.1em;
-  color: white;
-  text-transform: uppercase;
-  line-height: 1;
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: 400;
-  padding: 0.5em 1.5em;
-  cursor: pointer;
-  max-width: 60vw;
 }
