--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -2,7 +2,7 @@
   width: 90%;
   margin: 0 auto;
   max-width: 50em;
-  margin-top: 5em;
+  margin-top: 1.5em;
   margin-bottom: 5em;
 }
 
@@ -14,13 +14,6 @@
 
 .about-img {
   max-height: 25em;
-}
-
-@media (min-width: 42em) {
-  .about-img {
-    float: left;
-    margin-right: 1em;
-  }
 }
 
 .about-title {
@@ -96,5 +89,16 @@
 
   .about-text {
     grid-row: 3 / 4;
+  }
+}
+
+@media (min-width: 42em) {
+  .about-me {
+    margin-top: 5em;
+  }
+
+  .about-img {
+    float: left;
+    margin-right: 1em;
   }
 }
