--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -44,7 +44,29 @@ nav ul {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 400;
   text-decoration: none;
-  color: black;
-  width: 10vw;
+  width: 100%;
   padding: 20px 0;
+}
+
+@media (max-width: 50em) {
+  nav {
+    bottom: 0;
+    top: initial;
+    border-top: 1px solid #223843;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+
+  .navbar li {
+    width: 25vw;
+    border-right: 1px solid #223843;
+  }
+
+  .navbar li:last-of-type {
+    border-right: none;
+  }
+
+  .navbar a {
+    font-size: 3vw;
+    font-weight: 900;
+  }
 }
