fixed issue with smooth scrolling and changed size of social icons for the mobile view

--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -60,3 +60,9 @@
 .intro-social-icon img:hover {
   filter: invert(0);
 }
+
+@media (max-width: 50em) {
+  .intro-social-icon img {
+    width: 70%;
+  }
+}
