--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,20 @@
 @tailwind utilities;
 
 @layer base {
+  * {
+    @apply leading-6;
+  }
+  html,
+  body {
+    @apply dark:bg-gray-800 dark:text-gray-50;
+  }
+  h1 {
+    @apply font-bold text-4xl mb-6;
+  }
+  h2 {
+    @apply font-bold text-2xl mb-4;
+  }
   a {
-    @apply text-blue-600 hover:text-blue-500;
+    @apply text-blue-600 hover:text-blue-500 dark:text-blue-300 dark:hover:text-blue-200 hover:underline;
   }
 }
